# aftn

./: CMakeLists.txt  LICENSE  README.md  build_run.sh  readmap.txt
game_data/: banner.txt
game_data/maps/: default  format.txt
include/: arguments.h  character.h  config.h.in  item.h  manager.h  objective.h  utils.h
include/map/: encounter.h  map.h  room.h
maps/: default
src/: arguments.c  character.c  encounter.c  item.c  main.c  manager.c  objective.c  utils.c
src/map/: encounter.c  map.c  room.c
